// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip tests should handle dark mode 1`] = `
<div>
  <span
    class="mcl-tooltip-wrapper"
  >
    <span
      class="mcl-tooltip-trigger"
    >
      <button>
        Hello
      </button>
    </span>
  </span>
</div>
`;

exports[`Tooltip tests should handle some style 1`] = `
<div>
  <span
    class="mcl-tooltip-wrapper"
  >
    <span
      class="mcl-tooltip-trigger"
    >
      <h2>
        Hello
      </h2>
    </span>
  </span>
</div>
`;

exports[`Tooltip tests should render correctly 1`] = `
<div>
  <span
    class="mcl-tooltip-wrapper"
  >
    <span
      class="mcl-tooltip-trigger"
    >
      <h2>
        Hello
      </h2>
    </span>
  </span>
</div>
`;

exports[`Tooltip tests should render without a position 1`] = `
<div>
  <span
    class="mcl-tooltip-wrapper"
  >
    <span
      class="mcl-tooltip-trigger"
    >
      <div>
        Hellos
      </div>
    </span>
  </span>
</div>
`;
